Default bottom icon checking issue

--- a/app/src/main/res/drawable/anim_home_drawable.xml
+++ b/app/src/main/res/drawable/anim_home_drawable.xml
@@ -4,19 +4,23 @@
     tools:targetApi="lollipop">
     <!-- provide a different drawable for each state-->
     <item android:id="@+id/state_on"
-        android:drawable="@drawable/ic_home_active_avd"
-        android:state_checked="true"
- />
+        android:drawable="@drawable/ic_home_active"
+        android:state_checked="true"/>
+
     <item android:id="@+id/state_off"
-        android:drawable="@drawable/ic_home_inactive"/>
-    <item
-        android:drawable="@drawable/ic_home_active_avd"/>
+        android:drawable="@drawable/ic_home_inactive"
+        android:state_checked="false"
+        />
 
+    <!--
+        <item android:id="@id/default"
+            android:drawable="@drawable/ic_home_inactive"/>
+    -->
 
-    <!-- specify transitions -->
     <transition
         android:drawable="@drawable/ic_home_active_avd"
-        android:fromId="@id/state_off"
-        android:toId="@id/state_on" />
+        android:fromId="@+id/state_off"
+        android:toId="@+id/state_on"
+        />
 
 </animated-selector>
